[MSS-513] Fix Alignment of apple pay on PDP mobile.

--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
@@ -17,7 +17,6 @@
 
     .dw-apple-pay-button {
         &.apple-pay-pdp {
-            margin-left: 0 !important;
             margin-top: rem(5);
             min-width: 100%;
         }
@@ -1592,6 +1591,7 @@ body {
         @include media-breakpoint-down(lg) {
             width: 100%;
             margin-bottom: rem(5);
+            margin-left: rem(5px) !important;
         }
     }
 }
